# mouse-movement-driver

./: .gitignore  README.md  install_neac.bat  mousedrive.sln  qc
neac/: main.cpp  neac.sln  neac.vcxproj
src/Loader/: CMakeLists.txt  DriverEntryShellcode.hpp  Mapper.cpp  Mapper.hpp  NeacInterface.cpp  NeacInterface.hpp  NeacMapLoader.vcxproj  PoolShellcode.hpp  SyscallHijack.cpp  SyscallHijack.hpp  main.cpp
src/driver/: hid_descriptor.h  vhid_mouse.c  vhid_mouse.inf  vhid_mouse.vcxproj  vhid_mouse_wdm.c  vhid_mouse_wdm.vcxproj  vhid_mouse_wdm_v2.c
src/shared/: vhid_interface.h
